initial utf8 and space in filenames tests

--- a/base/ltfinal.dtx
+++ b/base/ltfinal.dtx
@@ -1096,6 +1096,8 @@
 %    \begin{macrocode}
 \makeatother
 \errorstopmode
+\input{utf8andspace}
+\everyjob\expandafter{\the\everyjob\typeout{^^JUTF-8 and SPACE TESTS^^J}}
 \dump
 %</2ekernel>
 %    \end{macrocode}
