avoid putting patch file on \listfiles output

--- a/base/ltfinal.dtx
+++ b/base/ltfinal.dtx
@@ -1094,9 +1094,9 @@
 % \changes{v1.0t}{1995/06/13}
 %         {Call \cs{errorstopmode}}
 %    \begin{macrocode}
+\@@input utf8andspace
 \makeatother
 \errorstopmode
-\input{utf8andspace}
 \everyjob\expandafter{\the\everyjob\typeout{^^JUTF-8 and SPACE TESTS^^J}}
 \dump
 %</2ekernel>
