This should fix the tlb2140 issue (and the other two)

--- a/base/utf8andspace.tex
+++ b/base/utf8andspace.tex
@@ -68,30 +68,8 @@
 \long\def\UTF@fourharmless@octets#1#2#3#4{\string#2\string#3\string#4\string}
 
 
-% the next one isn't quite safe as \@curr@file bight get changed by
-% another test (see 25 year old bug fixed this morning, but that can
-% be mended
 
-\long\def \IfFileExists#1#2#3{%
-  \set@curr@file{#1}%
-  \edef\q@curr@file{\expandafter\quote@name\expandafter{\@curr@file}}%
-  \openin\@inputcheck\q@curr@file\space
-  \ifeof\@inputcheck
-    \ifx\input@path\@undefined
-      \def\reserved@a{#3}%
-    \else
-      \def\reserved@a{\@iffileonpath\q@curr@file{#2}{#3}}%
-    \fi
-  \else
-    \closein\@inputcheck
-    \edef\@filef@und{\q@curr@file\space }%
-    \def\reserved@a{#2}%
-  \fi
-  \reserved@a}
-
-\long\def \InputIfFileExists#1#2{%
-  \IfFileExists{#1}%
-    {#2\@addtofilelist{#1}\@@input \@filef@und}}
+%-------------------------------------------------------------------------
 
 \def\set@curr@file#1{%
   \begingroup
@@ -99,6 +77,24 @@
     \xdef\@curr@file{\expandafter\string\csname #1\endcsname}%
   \endgroup
 }
+
+
+%-------------------------------------------------------------------------
+
+% pass quoted file name as normal argument to allow recursive use
+
+\let\IfFileExists@\IfFileExists
+
+\def\IfFileExists#1{%
+  \set@curr@file{#1}%
+  \edef\q@curr@file{\expandafter\quote@name\expandafter{\@curr@file}}%
+  \expandafter\IfFileExists@\expandafter{\q@curr@file}}
+
+
+
+\long\def \InputIfFileExists#1#2{%
+  \IfFileExists{#1}%
+    {#2\@addtofilelist{#1}\@@input \@filef@und}}
 
 \def\@iinput#1{%
   \InputIfFileExists{#1}{}%
@@ -109,35 +105,17 @@
    \reserved@a}}
 
 
-\def\@include#1 {%
-  \clearpage
-  \set@curr@file{#1}%
-  \if@filesw
-    \immediate\write\@mainaux{\string\@input{\@curr@file.aux}}%
-  \fi
-  \@tempswatrue
-  \if@partsw
-    \@tempswafalse
-    \@for\reserved@a:=\@partlist\do
-      {\ifx\reserved@a\@curr@file\@tempswatrue\fi}%
-  \fi
-  \if@tempswa
-    \let\@auxout\@partaux
-    \if@filesw
-      \immediate\openout\@partaux \@curr@file.aux
-      \immediate\write\@partaux{\relax}%
-    \fi
-    \@input@{\@curr@file.tex}%
-    \clearpage
-    \@writeckpt{\@curr@file}%
-    \if@filesw
-      \immediate\closeout\@partaux
-    \fi
+%-------------------------------------------------------------------------
+
+\def\include#1{\relax
+  \ifnum\@auxout=\@partaux
+    \@latex@error{\string\include\space cannot be nested}\@eha
   \else
-    \deadcycles\z@
-    \@nameuse{cp@\@curr@file}%
-  \fi
-  \let\@auxout\@mainaux}
+  \set@curr@file{#1 }%
+  \expandafter\@include\@curr@file
+  \fi}
+
+
 
 % that zapspace ... hmmm
 
