fixed the graphic file loading (needs improvements, qupting is still weird); added test file

--- a/base/utf8andspace.tex
+++ b/base/utf8andspace.tex
@@ -425,9 +425,43 @@
 
 % graphics
 
-
+% the quoting business for graphic files needs further sorting
+%  out. This should be handled different, right now we quote and
+%  unquote all over the place as we still use the old code base.
+%
+% This also makes the file name displays weird!
 
 \AtBeginDocument{%
+\def\Gread@generic@aux#1#2{%
+  \begingroup
+  \@tempcnta\z@
+  \loop\ifnum\@tempcnta<\@xxxii
+     \catcode\@tempcnta14 %
+     \advance\@tempcnta\@ne
+  \repeat
+  \catcode`\^^?14 %
+  \let\do\@makeother
+  \dospecials
+  \catcode`\ 10 %
+  \catcode`\^^I10 %
+  \catcode\endlinechar5 %
+  \@makeother\:%
+  \@makeother\-%
+%%% this is a fix as we now have already quotes so can't add more
+%%% this is certainly not the the only place where this is wrong
+%%% needs checking all driver files
+  \immediate\openin\@inputcheck#1 %    <--- now already quoted!
+  #2{#1}%
+  \ifGin@bbox
+    \expandafter\xdef\csname #1 bbox\Gread@attr@hash\endcsname{\@gtempa}%
+  \else
+    \@latex@error
+      {Cannot determine size of graphic in #1 (no BoundingBox)}%
+      \@ehc
+    \gdef\@gtempa{0 0 72 72 }%
+  \fi
+  \endgroup
+}
 \def\Gin@getbase#1{%
   \edef\Gin@tempa{%
     \def\noexpand\@tempa####1#1\space{%
